# BreakoutOgre

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.cpp
Private/: player.cpp
Public/: ball.h
assets/: ball.mtl  blue.mtl
src/: ball.cpp  brick.cpp  brick.h  main.cpp  player.cpp  player.h
